added text and reply form

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         decades.Programming languages often remain the usage for longer than
         their founders expect.
       </p>
-      
+
       <p>
         Programmers find innovative ways to recreate these languages for
         different purpose.Thus, some static do's and dont's are always of use in
@@ -31,7 +31,76 @@
         before coding even begins, a few prerequsite need to be fullfilled in
         order to provide a solid foundation on which readable code be written,
       </p>
+      <h2>PREREQUSITES</h2>
+      <p>
+        This is easily the most important step of all.In absence of this, cod
+        may be inefficient even it is completed. The prerequsite that need to be
+        in place for an efficient code covers matter like design and
+        architecture. An important question is how development is structured.
+        What is specific purpose of software?The problem that the code is meant
+        to solve must be clear to the developer. What is th design of individual
+        components? Such basic requirements have to be fullfilled when a good
+        code is written.
+      </p>
+      <p>
+        Once these are met, it becomes easier to follow some established good
+        coding practice.
+      </p>
+      <ul>
+        <li><h2>COMMENTING</h2></li>
+        <p>
+          Commenting is one of the technique that is often ignored by
+          programmers,especially for the code that is written fo multiple
+          programmers. However comment reduce the cost of knowledge transfer.
+          Name of the module, purpose of the module, description of module,
+          original author, modifications and authors who modified code with a
+          description on why it was modified were components of early commenting
+          practice.
+        </p>
+        <li><h2>GOOD NAMEING CONVENTIONS</h2></li>
+        <p>
+          Use good naming conventions is the next step to good coding. Often
+          developers use X1 or Y1 as variables and then donot repace them with
+          meaningful names. To prevent this confusion and utter waste of time,
+          descriptive names should be used.
+        </p>
+        <li>
+          <h2>DEPLOYMENT</h2>
+          <p>
+            Once code has been written, it has to be deployed.The installation
+            files should be kept to a minimum ans update regularly. Unused code
+            or anything that is not necessary should not be instslled.
+          </p>
+        </li>
+      </ul>
+      <p>The best practice foe coding are, most of all, designed to reduce risk when there are chances of it. For a beginner, few of this will not be completely applicable. But a hard boiled programmer writing numerous codes, all these guidlines will come
+      in handy. Since code can run milllions of lines at times, oudated advise like 'keep it simple' or 'less is more' is priceless and should always be rembered.</p>
     </main>
-    <footer></footer>
+    <footer>
+      <h2>Leave a reply</h2>
+      <p>Your enail addres would not be published. Required fields are marked*</p>
+      <form action="">
+        
+        <label for="">
+          Comment* 
+        </label>
+        <textarea name="" id="" cols="30" rows="10"></textarea>
+        <br>
+        <label for="">Name*
+          <input type="text" name="" id="">
+        </label>
+        <br>
+        <label for="">Email*
+          <input type="email" name="" id="">
+        </label>
+        <br>
+        <label for="">
+          Website
+          <input type="text" name="" id="">
+        </label>
+        <br>
+        <input type="submit" value="Post comment">
+      </form>
+    </footer>
   </body>
 </html>
